GeneWeb version 3.09
--------------------

* GeneWeb server or CGI (gwd)
  - [28 Oct 00] Added a trace of the last "wizard" accesses (in the
    file cnt/base_w.txt). The idea is to know if some "wizards" are no
    more using their connections. Applies only to wizards defined in the
    file of the variable "wizard_passwd_file" of the file base.gwf.
  - [26 Oct 00] In forum, added "<table>..</table>" around messages
    to prevent unterminated tags to perturbate the other messages.
  - [24 Oct 00] In family updating, when there is a name conflict while
    creating a person, now proposes to try again with the first free number
    Lightly changed the interface for the same situation in person updating
    (code written by Ludovic Ledieu).
  - [20 Oct 00] In family updating, added a check that (created) persons
    are born before their death: this check was missing.
  - [11 Oct 00] Important improvement: added a system of template
    files for the personal pages. It is therefore possible to change the
    displaying of the personal pages, by editing the template. It is also
    possible, for a site accomodating several data bases, to have a
    personal template file specific to each data base.

* Lexicon (lang/lexicon.txt)
  - [23 Oct 00] Updated Hebrew version (Jonathan B. Marder)

* GeneWeb compiler (gwc)
  - [03 Oct 00] Fixed bug: there were an inconsistency between "gwc"
    and the inline updating, for persons "keys": the inline updating
    considered spaces in names as significant but not "gwc". Result:
    when cleaning up a data base (gwu + gwc) or when importing a data
    base from an old version of GeneWeb, it could cause names conflict
    errors (for example if both "Anne.0 Le Blanc" and "Anne.0 Leblanc"
    were defined).

* Gedcom to GeneWeb (ged2gwb)
  - [17 Oct 00] Fixed bug: problem of accessing persons with the same
    names when they contained declinations (Czech names, for example).
